syntax = "proto3";

package logsPackage;

service logsService {
    rpc getReport (ReportRequest) returns (ReportResponse) {}
    rpc getUid (uidRequest) returns (uidResponse) {}
    rpc getWorkoutData (WorkoutDataRequest) returns (WorkoutDataResponse) {}
  }

  message ReportRequest {
    string uid = 1;
    int32 start = 2;
    int32 end = 3;
  }

  message ReportResponse {
    repeated Report report = 1;
  }
  
  message Report {
    string uploadDateAndTime = 1;
    int32 NoOfTrue = 2;
    int32 NoOfFalse = 3;
  }

  message uidRequest {
  }

  message uidResponse {
    repeated int32 uid = 1;
  }

  message WorkoutDataRequest {
    string uid = 1;
    string start = 2;
    string end = 3;
  } 

  message workoutType {
    repeated string uploadDateAndTime = 1;
    repeated float averageForEachDay = 2;
  }

  message WorkoutDataResponse {
    workoutType push = 1;
    workoutType pull = 2;
    workoutType legs = 3;
    workoutType cardio = 4;
  }
